# simkl

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: anime.rs  auth.rs  calendar.rs  error.rs  images.rs  lib.rs  movie.rs  pagination.rs  pin.rs  rate_limit.rs  request.rs  response.rs  search.rs  show.rs  sync.rs  user.rs
