[package]
name = "simkl"
authors = ["Sébastien LUNDI"]
description = "XMLTV for electronic program guide (EPG) parser and generator using serde."
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://codeberg.org/slundi/simkl"
keywords = ["simkl", "serde", "api", "anime", "movie", "tv", "tvdb"]
categories = ["parsing", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simkl"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
