[package]
name = "simkl"
authors = ["Sébastien LUNDI"]
description = "Library to build queries for SIMKL and decoding JSON responses using Serde"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://codeberg.org/slundi/simkl"
keywords = ["simkl", "api", "anime", "movie", "tv"]
categories = ["parsing", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simkl"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
